# Threebolt

./: .gitignore  CMakeLists.txt  README.md  threebolt.g4  vcpkg.json
examples/: duplicate_function_name.3b  simple.3b
include/: codegenerator.h  errorlogger.h  examplevisitor.h  interpreter.h  scope.h  scopepopulator.h  scopetable.h  symbol.h  type.h  typechecker.h
src/: codegenerator.cpp  errorlogger.cpp  examplevisitor.cpp  interpreter.cpp  main.cpp  scope.cpp  scopepopulator.cpp  type.cpp  typechecker.cpp
